Finish up some TODOs

--- a/text/auditing.tex
+++ b/text/auditing.tex
@@ -79,7 +79,7 @@ We define $A\sub{n}$ as our perception of which validator is required to audit e
 \begin{align}
   A\sub{n}: \workreport &\to \protoset{\valindex} \\
 %  \forall \tup{\cX, \wrX} &\in \local¬tranche\sub{0} : v \in q\sub{0}(\wrX)
-  % TODO: ^^^ Fix this.
+  % TODO: #445 ^^^ Fix this.
 \end{align}
 
 We further define $J_\top$ and $J_\bot$ to be the validator indices who we know to have made respectively, positive and negative, judgments mapped from each work-report's core. We don't care from which tranche a judgment is made.
