--- a/text/pvm.tex
+++ b/text/pvm.tex
@@ -1,6 +1,6 @@
 \section{Polkadot Virtual Machine}\label{sec:virtualmachine}
 
-%TODO: First 64KB of memory is always inaccessible.
+%TODO: #446 First 64KB of memory is always inaccessible.
 
 \subsection{Basic Definition}
 \newcommand*{\instr}[1]{\text{{\small \texttt{#1}}}}
@@ -22,10 +22,6 @@
 \newcommand*{\unbits}[1]{\unbitsn{8}{#1}}
 \newcommand*{\bitsn}[2]{\bitsfunc{#1}(#2)}
 \newcommand*{\unbitsn}[2]{\unbitsfunc{#1}(#2)}
-%\newcommand*{\signed}[1]{{{}^{\mathord{\mp}}#1}}
-%\newcommand*{\unsigned}[1]{{{}^{\mathord{+}}#1}}
-%\newcommand*{\signedn}[2]{{{}_{#1}^{\mathord{\mp}}#2}}
-%\newcommand*{\unsignedn}[2]{{{}_{#1}^{\mathord{+}}#2}}
 \newcommand*{\RA}{\token{RA}}
 \newcommand*{\SP}{\token{SP}}
 \newcommand*{\T}{\token{T}}
