--- a/preamble.tex
+++ b/preamble.tex
@@ -632,9 +632,9 @@
 \newcommand*{\¬priorstateroot}{R}
 \newcommand*{\¬timeslot}{T}
 \newcommand*{\¬extrinsichash}{X}
-\newcommand*{\¬epochmark}{\mathbf{E}}
-\newcommand*{\¬winnersmark}{\mathbf{W}}
-\newcommand*{\¬offendersmark}{\mathbf{O}}
+\newcommand*{\¬epochmark}{E}
+\newcommand*{\¬winnersmark}{W}
+\newcommand*{\¬offendersmark}{O}
 \newcommand*{\¬authorindex}{I}
 \newcommand*{\¬vrfsig}{V}
 \newcommand*{\¬sealsig}{S}
@@ -668,10 +668,10 @@
 \newcommand*{\entropyaccumulator}{\eta_0}
 
 \newcommand*{\privileges}{\chi}
-\newcommand*{\manager}{\privileges_m}
-\newcommand*{\delegator}{\privileges_v}
-\newcommand*{\assigners}{\privileges_\mathbf{a}}
-\newcommand*{\alwaysaccers}{\privileges_\mathbf{g}}
+\newcommand*{\manager}{\privileges_M}
+\newcommand*{\delegator}{\privileges_V}
+\newcommand*{\assigners}{\privileges_A}
+\newcommand*{\alwaysaccers}{\privileges_Z}
 
 \newcommand*{\accumulated}{\xi}
 \newcommand*{\ready}{\omega}
@@ -683,20 +683,20 @@
 \newcommand*{\recenthistory}{\recent_H}
 \newcommand*{\beefybelt}{\recent_B}
 \newcommand*{\recentpostparentstaterootupdate}{\recent^\dagger}
-\newcommand*{\recenthistorypostparentstaterootupdate}{\recent^\dagger_H}
+\newcommand*{\recenthistorypostparentstaterootupdate}{\recenthistory^\dagger}
 
 \newcommand*{\disputes}{\psi}
-\newcommand*{\goodset}{\disputes_\mathbf{g}}
-\newcommand*{\badset}{\disputes_\mathbf{b}}
-\newcommand*{\wonkyset}{\disputes_\mathbf{w}}
-\newcommand*{\offenders}{\disputes_\mathbf{o}}
+\newcommand*{\goodset}{\disputes_G}
+\newcommand*{\badset}{\disputes_B}
+\newcommand*{\wonkyset}{\disputes_W}
+\newcommand*{\offenders}{\disputes_O}
 
 % Safrole state.
 \newcommand*{\safrole}{\gamma}
-\newcommand*{\epochroot}{\gamma_z}
-\newcommand*{\sealtickets}{\gamma_\mathbf{s}}
-\newcommand*{\ticketaccumulator}{\gamma_\mathbf{a}}
-\newcommand*{\pendingset}{\gamma_\mathbf{k}}
+\newcommand*{\epochroot}{\gamma_Z}
+\newcommand*{\sealtickets}{\gamma_S}
+\newcommand*{\ticketaccumulator}{\gamma_A}
+\newcommand*{\pendingset}{\gamma_P}
 % Safrole-adjacent sets
 \newcommand*{\thetime}{\tau}
 % Validator key sets.
